# swagger.yaml
@@ -38,7 +38,6 @@ paths:
           headers: {}
       deprecated: false
       security: []
-
   /users/login:
     post:
       tags:
@@ -66,7 +65,6 @@ paths:
           headers: {}
       deprecated: false
       security: []
-
   /users/resetpassword/{token}:
     put:
       tags:
@@ -99,7 +97,6 @@ paths:
           headers: {}
       deprecated: false
       security: []
-
   /users/forgotpassword:
     post:
       tags:
@@ -125,7 +122,6 @@ paths:
           headers: {}
       deprecated: false
       security: []
-
   /users:
     get:
       tags:
@@ -158,7 +154,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
     patch:
       tags:
         - Users
@@ -189,7 +184,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
     delete:
       tags:
         - Users
@@ -208,11 +202,10 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /users/cart:
     get:
       tags:
-        - Users
+        - Cart
       summary: User Cart
       operationId: UserCart
       parameters: []
@@ -221,7 +214,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /users/profile:
     get:
       tags:
@@ -234,11 +226,10 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /users/addtocart:
     post:
       tags:
-        - Users
+        - Cart
       summary: Add To Cart
       operationId: AddToCart
       parameters: []
@@ -265,11 +256,10 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /users/deletefromCart:
     post:
       tags:
-        - Users
+        - Cart
       summary: Delete From Cart
       operationId: DeleteFromCart
       parameters: []
@@ -290,7 +280,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /brands:
     get:
       tags:
@@ -303,7 +292,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
     post:
       tags:
         - Brands
@@ -327,7 +315,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /brands/{id}:
     get:
       tags:
@@ -347,7 +334,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
     put:
       tags:
         - Brands
@@ -378,7 +364,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /{id}:
     delete:
       tags:
@@ -398,7 +383,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /categories:
     get:
       tags:
@@ -412,7 +396,6 @@ paths:
           headers: {}
       deprecated: false
       security: []
-
     post:
       tags:
         - Categories
@@ -436,7 +419,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /categories/{id}:
     get:
       tags:
@@ -456,7 +438,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
     put:
       tags:
         - Categories
@@ -487,7 +468,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
     delete:
       tags:
         - Categories
@@ -506,7 +486,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /products:
     get:
       tags:
@@ -520,7 +499,6 @@ paths:
           headers: {}
       deprecated: false
       security: []
-
     post:
       tags:
         - Products
@@ -612,7 +590,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /products/{id}:
     get:
       tags:
@@ -724,7 +701,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
     delete:
       tags:
         - Products
@@ -743,7 +719,6 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-
   /products/me:
     get:
       tags:
@@ -756,22 +731,20 @@ paths:
           description: ""
           headers: {}
       deprecated: false
-  /products/like:
-    post:
+  /products/{id}/like:
+    patch:
       tags:
         - Products
       summary: Like / Dislike Product
       operationId: Like/DislikeProduct
-      parameters: []
-      requestBody:
-        description: ""
-        content:
-          application/json:
-            schema:
-              type: string
-            example:
-              productId: 6329cafbd202f7b21db11ffc
-        required: true
+      parameters:
+        - name: id
+          in: path
+          description: ""
+          required: true
+          style: simple
+          schema:
+            type: string
       responses:
         "200":
           description: ""
@@ -1505,13 +1478,15 @@ tags:
     description: ""
   - name: Users
     description: ""
-  - name: Brands
+  - name: Products
+    description: ""
+  - name: Cart
+    description: ""
+  - name: Orders
     description: ""
   - name: Categories
     description: ""
-  - name: Products
-    description: ""
-  - name: Orders
+  - name: Brands
     description: ""
   - name: Types
     description: ""
